fix breadcrumb spacing

--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -22,14 +22,13 @@
 /* ownership breadcrumb border */
 .ownership-active-bread-link {
     position: relative;
-    padding-bottom: 8px;
     text-align: center;
 }
 
 .ownership-active-bread-link::after {
     content: "";
     position: absolute;
-    bottom: 0;
+    bottom: -8px;
     left: 50%;
     transform: translateX(-50%);
     width: 24px;
